--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,5 @@ dependencies {
     implementation("javax.servlet:servlet-api:2.5")
     implementation("javax.servlet:jstl:1.2")
 
-    compileOnly("mysql:mysql-connector-java:8.0.31")
+    implementation("mysql:mysql-connector-java:8.0.31")
 }
