--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
     </servlet-mapping>
     <servlet>
         <servlet-name>ProductsController</servlet-name>
-        <servlet-class>tranlong5252.foodsupplychain.controllers.ProductsController</servlet-class>
+        <servlet-class>tranlong5252.foodsupplychain.controllers.client.ProductsController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>ProductsController</servlet-name>
@@ -35,7 +35,7 @@
     </servlet-mapping>
     <servlet>
         <servlet-name>CartController</servlet-name>
-        <servlet-class>tranlong5252.foodsupplychain.controllers.CartController</servlet-class>
+        <servlet-class>tranlong5252.foodsupplychain.controllers.client.CartController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>CartController</servlet-name>
