--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <session-config>
         <session-timeout>
@@ -73,7 +73,7 @@
         <servlet-name>RegionController</servlet-name>
         <url-pattern>/Region</url-pattern>
     </servlet-mapping>
-    
+
     <servlet>
         <servlet-name>AccountController</servlet-name>
         <servlet-class>tranlong5252.foodsupplychain.controllers.common.AccountController</servlet-class>
